--- a/templates/meteo.html.twig
+++ b/templates/meteo.html.twig
@@ -4,8 +4,11 @@
 
 {% block body %}
 <section class="container my-4">
-    <h1 class="mb-4">Météo à {{ ville }}</h1>
+    <h1 class="mb-4">Météo à {{ ville.name }}</h1>
+    <h2>{{ ville.date }}</h2>
 
+    <p class="text-center">levé {{ville.ephemeride.sunrise}} - couché {{ville.ephemeride.sunset}}</p>
+    
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 mb-5">
         {% for source in sources %}
             <div class="col">
