--- a/templates/meteo.html.twig
+++ b/templates/meteo.html.twig
@@ -4,10 +4,10 @@
 
 {% block body %}
 <section class="container my-4">
-    <h1 class="mb-4">Météo à {{ ville.name }}</h1>
-    <h2>{{ ville.date }}</h2>
+    <h1 class="mb-4">Météo à {{ ville }}</h1>
+    <h2>{{ infosDay.date }}</h2>
 
-    <p class="text-center">levé {{ville.ephemeride.sunrise}} - couché {{ville.ephemeride.sunset}}</p>
+    <p class="text-center">levé {{infosDay.ephemeride.sunrise}} - couché {{infosDay.ephemeride.sunset}}</p>
     
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 mb-5">
         {% for source in sources %}
