--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,11 +9,15 @@
 		</title>
 
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+		 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
+		 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0/dist/chartjs-plugin-datalabels.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@1.4.0/dist/chartjs-plugin-annotation.min.js"></script>
 
 
-		<link rel="stylesheet" href="{{ asset('styles/app.css') }}"> {% block javascripts %}{% endblock %}
-		</head>
-		<body>
-			{% block body %}{% endblock %}
+		<link rel="stylesheet" href="{{ asset('styles/app.css') }}"> {% block javascripts %}
+			{{ importmap() }}
+		{% endblock %}
+	</head>
+	<body data-controller="register-chart-plugins"> {% block body %}{% endblock %}
 		</body>
 	</html>
