--- a/templates/chart.html.twig
+++ b/templates/chart.html.twig
@@ -71,7 +71,7 @@
             }
           },
           plugins: {
-            legend: { display: true },
+            legend: { display: false },
             datalabels: {
               color: '#000',
               anchor: 'end',
